# converterpro

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  _config.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/workflows/: build.yml
.github/workflows/: build.yml
converterpro/: __init__.py  __main__.py  weight_converter.py
docs/: contributing.md  index.md  license.md  requirements.txt  usage.md  weight_converter_reference.md  weight_converter_usage.md
search/: search_index.json
tests/: weight_converter_test.py
usage/: index.html
weight_converter_reference/: index.html
