[tool.poetry]
name = "converter-pro"
version = "0.1.0"
description = "Python converter library"
authors = ["Lily Sam <los2119@columbia.edu>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
